--- a/app/src/main/res/layout/result_layout.xml
+++ b/app/src/main/res/layout/result_layout.xml
@@ -8,9 +8,9 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editText11"
+        android:id="@+id/Congratulation"
         android:layout_weight="0.21"
-        android:text="Congradulation!!"
+        android:text="Congratulation!!"
         android:gravity="center_horizontal"/>
 
     <LinearLayout
@@ -48,6 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Enter"
+            android:id="@+id/Enter_Button"
             android:onClick="onSendUserName"
             />
 
