--- a/app/src/main/res/layout/result_layout.xml
+++ b/app/src/main/res/layout/result_layout.xml
@@ -5,7 +5,7 @@
     android:weightSum="1">
 
 
-    <EditText
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/Congratulation"
@@ -18,6 +18,12 @@
         android:layout_height="200dp"
         android:orientation="horizontal"
         >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/game_score"
+            android:text="Your Score is: "
+            />
 
 
 
